# NaK

./: .cursorignore  .dockerignore  .gitignore  CHANGELOG  CHANGELOG.md  CHANGES.md  Cargo.toml  Dockerfile  Dockerfile.flet  LICENSE  PHASE2_MIGRATION.md  README.md  SESSION_SUMMARY.md  SIGILL_FIX_PROGRESS.txt  battleinstaller.sh  build.rs  build_all.sh  build_docker.sh  build_flet.sh  build_iced.sh  build_rust.sh  cloudbuild.yaml  create_iced_appimage.sh  create_simple_appimage.sh  create_tauri_system_python_appimage.sh  create_wails_appimage.sh  downloader.sh  install-nak.sh  mo2helper-gui.sh  mo2helper.sh  mo2helpertesting.sh  nak-installer.sh  nak-loader.sh  nak_backend.py  nak_backend.spec  nak_backend_simple.py  nak_flet.spec  nak_main.py  nuitka-crash-report.xml  package.json  (+2 more)
.github/: BUILDING.md  README.md
.github/workflows/: build-appimage.yml  build-cabextract.yml  build-release.yml  discord-notify.yml
AppDir/: .DirIcon  AppRun  nak-linux-modding-helper.desktop
NaK-Go/: go.mod  go.sum  main.go
NaK-Python/: LICENSE  Makefile  README.md  build_appimage.py  main.py  main_appimage.py  nak  nak_cli.py  requirements.txt  setup.py  steam_shortcut_cli.py
NaK-Python/src/: main.py
NaK-Wails.AppDir/: .DirIcon  AppRun  nak-gui.desktop
NaK-Wails.AppDir/src/: __init__.py  main.py
Nak Update/: installer.sh  modules.sh  nak.sh
Plugin Support/fixgameregistry/: LICENSE.txt  README-FixGameRegKey.txt  README-NaK-Linux.md  __init__.py
RadiumTextures/: radium.sh
RadiumTextures/libs/: cleanup.sh  config.sh  csv.sh  deps.sh  extract.sh  optimize.sh  utils.sh
docs/: FAQ.md
mo2helper/: main-script.sh
mo2helper/lib/: config.sh  core.sh  logging.sh  proton.sh  ui.sh  utils.sh
nak-files/: main-script.sh
nak-files/lib/: core.sh  error.sh  mo2download.sh  proton.sh  utils.sh  vortex.sh
nak-flet/: constants.py  main.py
nak-flet/components/: __init__.py  app_bar.py  progress_dialog.py  terminal_output.py
nak-flet/dialogs/: __init__.py  about_dialog.py  base_dialog.py  cache_config_dialog.py  error_dialog.py  game_selection_dialog.py  info_dialog.py  nxm_manager_dialog.py  nxm_remove_dialog.py  nxm_setup_dialog.py  nxm_test_dialog.py  proton_ge_dialog.py  proton_install_dialog.py  save_symlinker_test_dialog.py  settings_dialog.py  steam_picker_dialog.py  vortex_staging_dialog.py
nak-flet/utils/: __init__.py  file_picker_helper.py  game_scanner.py  winetricks_launcher.py
nak-flet/views/: __init__.py  addons_view.py  games_view.py  getting_started_view.py  home_view.py  instance_management_view.py  manager_options_view.py  mod_managers_view.py  simple_game_modding_view.py  wineprefix_manager_view.py
nak-flet/workflows/: mo2_workflow.py  unverum_workflow.py  vortex_workflow.py
nak-gui/: app.go  go.mod  main.go  wails.json
nak-gui/frontend/: index.html
scrapped projects/: ReadME
scrapped projects/RadiumTextures/: goob.md  radium.sh
src/: app.rs  config.rs  constants.py  games.rs  github.rs  lib.rs  logging.rs  main.py  main.rs  main_gui.py  nxm.rs  paths.rs  runtime_wrap.rs  scripts.rs  updater.rs  utils.rs
src/addons/: __init__.py  addon_manager.py
src/core/: __init__.py  core.py  dependency_installer.py  dotnet9sdk_installer.py  mo2_installer.py  unverum_installer.py  vortex_installer.py
src/game_finder/: bottles.rs  heroic.rs  known_games.rs  mod.rs  registry.rs  steam.rs  vdf.rs
src/gui/: __init__.py  main_window.py
src/installers/: common.rs  compatdata_scanner.rs  mo2.rs  mod.rs  plugin.rs  prefix_setup.rs  symlinks.rs  vortex.rs
src/marketplace/: mod.rs
src/mod_managers/: __init__.py
src/scripts/: fix_registry.sh  import_saves.sh  nxm_handler.sh  nxm_toggle.sh  steam_launch.sh  winetricks.sh
src/steam/: config.rs  mod.rs  paths.rs  proton.rs  shortcuts.rs
src/ui/: game_fixer.rs  marketplace.rs  mod.rs  mod_managers.rs  pages.rs  proton_tools.rs  sidebar.rs
src/utils/: cache_config.py  command_cache.py  comprehensive_game_manager.py  dependency_cache_manager.py  game_finder.py  game_utils.py  heroic_utils.py  launch_script_generator.py  logger.py  nak_paths.py  nak_storage_manager.py  nxm_handler_manager.py  prefix_locator.py  proton_finder.py  proton_ge_manager.py  proton_tool_manager.py  save_symlinker.py  utils.py  (+6 more)
ui/: components.slint  main.slint  pages.slint
(+79 files in other folders)
