[package]
name = "nak_rust"
version = "4.4.1"
edition = "2021"
build = "build.rs"

[lib]
name = "nak_rust"
path = "src/lib.rs"

[[bin]]
name = "nak"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
slint = "1.9"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
ureq = { version = "2.12", features = ["json"] }
ctrlc = "3.4"
wait-timeout = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
flate2 = "1.0"
tar = "0.4"
rfd = "0.16"
sevenz-rust = "0.6"
zip = "2.4"
rand = "0.9"
toml = "0.8"
version-compare = "0.2"

[build-dependencies]
slint-build = "1.9"

[profile.release]

opt-level = "z"     # Optimize for size

lto = true          # Enable Link Time Optimization (removes unused code)

codegen-units = 1   # Slower compile, smaller binary

panic = "abort"     # Remove panic unwinding logic

strip = true        # Automatically strip symbols
