[package]
name = "nak_rust"
version = "4.4.1"
edition = "2021"
build = "build.rs"

[lib]
name = "nak_rust"
path = "src/lib.rs"

[[bin]]
name = "nak"
path = "src/main.rs"
required-features = ["full"]

[features]
default = ["full"]
# Core: game detection, Proton detection, Steam paths, config, logging
# No heavy dependencies - suitable for use as a library
core = []
# Full: everything including GUI, installers, networking, archive handling
full = [
    "dep:clap", "dep:slint", "dep:image", "dep:ureq", "dep:ctrlc",
    "dep:wait-timeout", "dep:flate2", "dep:tar", "dep:rfd",
    "dep:sevenz-rust", "dep:zip", "dep:rand", "dep:toml",
    "dep:version-compare",
]

[dependencies]
# Core dependencies (always available)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# Full dependencies (optional, gated behind "full" feature)
clap = { version = "4.5", features = ["derive"], optional = true }
slint = { version = "1.9", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
ureq = { version = "2.12", features = ["json"], optional = true }
ctrlc = { version = "3.4", optional = true }
wait-timeout = { version = "0.2", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
rfd = { version = "0.16", optional = true }
sevenz-rust = { version = "0.6", optional = true }
zip = { version = "2.4", optional = true }
rand = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
version-compare = { version = "0.2", optional = true }

[build-dependencies]
slint-build = "1.9"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization (removes unused code)
codegen-units = 1   # Slower compile, smaller binary
panic = "abort"     # Remove panic unwinding logic
strip = true        # Automatically strip symbols
